failed-probe.yaml
apiVersion: v1

kind: Pod

metadata:

  creationTimestamp: null

  labels:

    run: nginx

  name: nginx

spec:

  containers:

  - image: nginx

    imagePullPolicy: IfNotPresent

    name: nginx

    resources: {}

    ports:

      - containerPort: 80 # Note: Readiness probes runs on the container during its whole lifecycle. Since nginx exposes 80, containerPort: 80 is not required for readiness to work.

    readinessProbe: # declare the readiness probe

      httpGet: # add this line

        path: / #

        port: 180 #

  dnsPolicy: ClusterFirst

  restartPolicy: Never

status: {}
