pod-env-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: mpod
  name: mpod
  namespace: exe
spec:
  containers:
  - command: ["/bin/sh", "-c", "sleep 3600"]
    image: busybox
    name: mpod1
    volumeMounts:
    - name: config-volume
      mountPath: /etc/foo
  - image: nginx
    name: mpod2
  volumes:
      - name: config-volume
        configMap:
          name: my-config
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
