pod-limit.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
  namespace: limit
spec:
  containers:
  - image: nginx
    name: nginx
    resources:
      requests:
        memory: "700Mi"
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
