pod-with-volumes.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busypod
  name: busypod
spec:
  containers:
  - image: busybox
    name: busypod
    resources: {}
    command: ["/bin/sh", "-c", "sleep 3600"]
    volumeMounts:
    - mountPath: "/etc/foo"
      name: myvolume
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
    - name: myvolume
      persistentVolumeClaim:
        claimName: pvc
status: {}
