twocontainers.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: twocontainerpod
  name: twocontainerpod
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - sleep 3600
    image: busybox
    name: twocontainerpod1
    resources: {}
  - args:
    - /bin/sh
    - -c
    - sleep 3600
    image: busybox
    name: twocontainerpod2
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
