canary.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: canary
  name: canary
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: canary
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: canary
  name: canary1
spec:
  replicas: 5
  selector:
    matchLabels:
      app: canary
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: canary
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - name: workdir
          mountPath: /usr/share/nginx/html
      volumes:
      - name: workdir
        emptyDir: {}
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: canary
  name: canary2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: canary
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: workdir
          mountPath: /usr/share/nginx/html
        resources: {}
      volumes:
      - name: workdir
        emptyDir: {}
status: {}
