np.yaml
apiVersion: networking.k8s.io/v1

kind: NetworkPolicy

metadata:

  name: test-network-policy

  namespace: default

spec:

  podSelector:

    matchLabels:

      app: testdeploy

  policyTypes:

    - Ingress

  ingress:

    - from:

        - podSelector:

            matchLabels:

              access: granted
